--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             </ul>
         </div>
     </header>
-    <section></section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+    </section>
     <section></section>
     <section></section>
     <footer></footer>
