Add image zoom and image cover text

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love running</h2>
+            <p>Birmingham, Erdington, Pype Hayes Park</p>
+        </div>
     </section>
     <section></section>
     <section></section>
