--- a/index.html
+++ b/index.html
@@ -27,7 +27,44 @@
             <p>Birmingham, Erdington, Pype Hayes Park</p>
         </div>
     </section>
-    <section></section>
+    <section>
+        <h2>Why Choose Love Running?</h2>
+        <div id="left-about">
+            <div class="left-about-header">
+                <h2>Feel Healthy</h2>
+                <hr>
+                <p>
+                    Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.
+                </p>
+            </div>
+            <div class="left-about-header">
+                <h2>Feel Free</h2>
+                <p>
+                    Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.
+                </p>
+            </div>
+        </div>
+
+        <div id="center-about">
+
+        </div>
+
+        <div id="right-about">
+            <div class="right-about-header">
+                <h2>Get Social</h2>
+                <hr>
+                <p>
+                    When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, inspire you to try new events
+                </p>
+            </div>
+            <div class="right-about-header">
+                <h2>Feel Strong</h2>
+                <p>
+                    Running strengthens your heart by pumping blood more effectively through your body.
+                </p>
+            </div>
+        </div>
+    </section>
     <section></section>
     <footer></footer>
 </body>
