--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
         </div>
     </section>
     <section>
-        <h2>Why Choose Love Running?</h2>
+        <h2 id="welcome">Why Choose Love Running?</h2>
         <div id="left-about">
-            <div class="left-about-header">
-                <h2>Feel Healthy</h2>
+            <div class="left-about-heading">
+                <h2>Feel Healthy <i class="fas fa-heartbeat"></i></h2>
                 <hr>
                 <p>
                     Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.
                 </p>
             </div>
-            <div class="left-about-header">
-                <h2>Feel Free</h2>
+            <div class="left-about-heading">
+                <h2>Feel Free <i class="fab fa-fly"></i></h2>
+                <hr>
                 <p>
                     Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.
                 </p>
@@ -46,19 +47,23 @@
         </div>
 
         <div id="center-about">
-
+            <div id="circle-container">
+                <div id="circle-cover-bg">
+                </div>
+            </div>
         </div>
 
         <div id="right-about">
-            <div class="right-about-header">
-                <h2>Get Social</h2>
+            <div class="right-about-heading">
+                <h2>Get Social <i class="fas fa-globe-europe"></i></h2>
                 <hr>
                 <p>
                     When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, inspire you to try new events
                 </p>
             </div>
-            <div class="right-about-header">
-                <h2>Feel Strong</h2>
+            <div class="right-about-heading">
+                <h2>Feel Strong <i class="fas fa-dumbbell"></i></h2>
+                <hr>
                 <p>
                     Running strengthens your heart by pumping blood more effectively through your body.
                 </p>
@@ -67,5 +72,9 @@
     </section>
     <section></section>
     <footer></footer>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/992adf8e89.js" crossorigin="anonymous"></script>
+    
 </body>
 </html>
