--- a/index.html
+++ b/index.html
@@ -72,42 +72,57 @@
     </section>
     <section id="times">
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fas fa-building"></i></h2>
             <h3>Monday</h3>
             <h3>5k</h3>
             <h3>The Marker Hotel</h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fas fa-tree"></i></h2>
             <h3>Wednesday</h3>
             <h3>10k</h3>
             <h3>Phoenix Park</h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fas fa-building"></i></h2>
             <h3>Friday</h3>
             <h3>5k</h3>
             <h3>The Marker Hotel</h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fas fa-tree"></i></h2>
             <h3>Saturday</h3>
             <h3>10k</h3>
             <h3>Phoenix Park</h3>
             <h3>09:30</h3>
         </div>
         <div>
-            <h2>Coffee</h2>
+            <h2>Coffee <i class="fas fa-mug-hot"></i></h2>
             <h3>Sunday</h3>
             <h3>0k</h3>
             <h3>The Marker Hotel</h3>
             <h3>11:30</h3>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <ul class="socials">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page (opens new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page (opens new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page (pens new tab)"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page (pens new tab)"><i class="fab fa-youtube"></i></a>
+            </li>
+        </ul>
+    </footer>
 
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/992adf8e89.js" crossorigin="anonymous"></script>
