--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <a id="logo">Love Running</a>
         <div id="menu">
             <ul>
-                <li><a>Home</a></li>
-                <li><a>Gallery</a></li>
-                <li><a>Sign up</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
+                <li><a href="signup.html">Sign up</a></li>
             </ul>
         </div>
     </header>
