add images to gallery and add media queries for club ethos content

--- a/gallery.html
+++ b/gallery.html
@@ -14,13 +14,28 @@
         <a id="logo">Love Running</a>
         <div id="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="gallery.html" class="active">Gallery</a></li>
-                <li><a href="signup.html">Sign up</a></li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="gallery.html" class="active">Gallery</a>
+                </li>
+                <li>
+                    <a href="signup.html">Sign up</a>
+                </li>
             </ul>
         </div>
     </header>
-    <section id="hero-outer">
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="two athletes running together">
+        <img src="assets/images/girls.jpg" alt="three girs at charity paint running festival">
+        <img src="assets/images/runner3.jpg" alt="solo male runner jogging on a beach">
+        <img src="assets/images/man.jpg" alt="man at charity painting running festival">
+        <img src="assets/images/runner1.jpg" alt="solo female runner jogging through phoenix park">
+        <img src="assets/images/runner2.jpg" alt="two athletes running together">
+        <img src="assets/images/runner4.jpg" alt="solo female runner jogging on a beach">
+        <img src="assets/images/running_gang.jpg" alt="large group of runners">
+        <img src="assets/images/mud-run.jpg" alt="solo male runner jogging on a beach">
     </section>
     <footer>
         <ul class="socials">
