add styles for times area on smaller screens

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Birmingham, Erdington, Pype Hayes Park</p>
         </div>
     </section>
-    <section>
+    <section id="club-ethos">
         <h2 id="welcome">Why Choose Love Running?</h2>
         <div id="left-about">
             <div class="left-about-heading">
